minor changes. fixed max height for description text. so that it doesn't overflow.

--- a/styleindex.css
+++ b/styleindex.css
@@ -53,8 +53,7 @@ ul{
 }
 
 img{
-    width: 300px;
-    height: 300px;
+    max-width: 300px;
     display: inline-block;
     transition: transform 0.3s ease;
 }
@@ -88,13 +87,12 @@ img:hover{
 }
 
 .item .desc{
-    display: inline-block;
-    width: 400px;
-    height: 300px;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    font-size: 1.2em;
+    line-height: 1.5;
+    max-width: 400px;
+    margin: 40px auto;
     padding: 48px 24px;
-    text-align: center;
+    text-align: justify;
     font-family: 'Courier New', Courier, monospace;
     color: #333;
 }
